src/tests/snapshots/calendar__tests__utils__adding_an_event_filled_dialog.snap
---
source: src/tests/utils.rs
expression: self.render()
---
 calendar   FOUR WEEKS  1 Jun 2026 – 28 Jun 2026

       MON             TUE             WED             THU             FRI             SAT             SUN
┌●▶ 1 Jun──────┐┌   2 Jun──────┐┌   3 Jun──────┐┌   4 Jun──────┐┌   5 Jun──────┐┌   6 Jun──────┐┌   7 Jun──────┐
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││ ┌ Add appointment · start + duration ──────────────────────────────────────┐ ││              │
└──────────────┘└─│ ┌Description───────────────────────────────────────────────────────────┐ │─┘└──────────────┘
┌   8 Jun──────┐┌ │ │Project kickoff                                                       │ │─┐┌   14 Jun─────┐
│              ││ │ └──────────────────────────────────────────────────────────────────────┘ │ ││              │
│              ││ │ ┌Start date────────────────────────────────────────────────────────────┐ │ ││              │
│              ││ │ │jun 7                                                                 │ │ ││              │
│              ││ │ └──────────────────────────────────────────────────────────────────────┘ │ ││              │
│              ││ │ ┌Start time · 13:00 or 5pm · blank with duration = all day─────────────┐ │ ││              │
│              ││ │ │13:00                                                                 │ │ ││              │
└──────────────┘└─│ └──────────────────────────────────────────────────────────────────────┘ │─┘└──────────────┘
┌   15 Jun─────┐┌ │ ┌Duration · e.g. 45m, 1h30m, or 1:30───────────────────────────────────┐ │─┐┌   21 Jun─────┐
│              ││ │ │1h30m                                                                 │ │ ││              │
│              ││ │ └──────────────────────────────────────────────────────────────────────┘ │ ││              │
│              ││ │                                                                          │ ││              │
│              ││ │ C-t mode · Tab/BackTab fields · C-u clear · Enter save · Esc back        │ ││              │
│              ││ │                                                                          │ ││              │
│              ││ │                                                                          │ ││              │
└──────────────┘└─└──────────────────────────────────────────────────────────────────────────┘─┘└──────────────┘
┌   22 Jun─────┐┌   23 Jun─────┐┌   24 Jun─────┐┌   25 Jun─────┐┌   26 Jun─────┐┌   27 Jun─────┐┌   28 Jun─────┐
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘
 n  add   Enter  agenda   /  search   v m/v w  views   ?  keys   Esc  back/quit    2026-06-01 · 0 event(s)
