src/tests/snapshots/calendar__tests__utils__adding_an_event_saved_four_week.snap
---
source: src/tests/utils.rs
expression: self.render()
---
 calendar   FOUR WEEKS  1 Jun 2026 – 28 Jun 2026  ■ personal

       MON             TUE             WED             THU             FRI             SAT             SUN
┌●  1 Jun──────┐┌   2 Jun──────┐┌   3 Jun──────┐┌   4 Jun──────┐┌   5 Jun──────┐┌   6 Jun──────┐┌ ▶ 7 Jun──────┐
│              ││              ││              ││              ││              ││              ││▌13:00 Project│
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘
┌   8 Jun──────┐┌   9 Jun──────┐┌   10 Jun─────┐┌   11 Jun─────┐┌   12 Jun─────┐┌   13 Jun─────┐┌   14 Jun─────┐
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘
┌   15 Jun─────┐┌   16 Jun─────┐┌   17 Jun─────┐┌   18 Jun─────┐┌   19 Jun─────┐┌   20 Jun─────┐┌   21 Jun─────┐
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘
┌   22 Jun─────┐┌   23 Jun─────┐┌   24 Jun─────┐┌   25 Jun─────┐┌   26 Jun─────┐┌   27 Jun─────┐┌   28 Jun─────┐
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘
 n  add   Enter  agenda   /  search   v m/v w  views   ?  keys   Esc  back/quit    2026-06-07 · 1 event(s)
Saved Project kickoff at Sun 7 Jun 13:00
