src/tests/snapshots/calendar__tests__utils__adding_an_event_saved_week.snap
---
source: src/tests/utils.rs
expression: self.render()
---
 calendar   WEEK  1 Jun 2026 – 7 Jun 2026  ■ personal

TIME      ●  Mon 1          Tue 2          Wed 3          Thu 4          Fri 5          Sat 6        ▶ Sun 7

ALL DAY│              │              │              │              │              │              │
       │              │              │              │              │              │              │
00:00  │·             │·             │·             │·             │·             │·             │·
01:00  │·             │·             │·             │·             │·             │·             │·
02:00  │·             │·             │·             │·             │·             │·             │·
03:00  │·             │·             │·             │·             │·             │·             │·
04:00  │·             │·             │·             │·             │·             │·             │·
05:00  │·             │·             │·             │·             │·             │·             │·
06:00  │·             │·             │·             │·             │·             │·             │·
07:00  │·             │·             │·             │·             │·             │·             │·
08:00  │·             │·             │·             │·             │·             │·             │·
09:00  │·             │·             │·             │·             │·             │·             │·
10:00  │·             │·             │·             │·             │·             │·             │·
11:00  │·             │·             │·             │·             │·             │·             │·
12:00  │·             │·             │·             │·             │·             │·             │·
13:00  │·             │·             │·             │·             │·             │·             │▌13:00 Project
14:00  │·             │·             │·             │·             │·             │·             │████████
15:00  │·             │·             │·             │·             │·             │·             │·
16:00  │·             │·             │·             │·             │·             │·             │·
17:00  │·             │·             │·             │·             │·             │·             │·
18:00  │·             │·             │·             │·             │·             │·             │·
19:00  │·             │·             │·             │·             │·             │·             │·
20:00  │·             │·             │·             │·             │·             │·             │·
21:00  │·             │·             │·             │·             │·             │·             │·
22:00  │·             │·             │·             │·             │·             │·             │·
23:00  │·             │·             │·             │·             │·             │·             │·
       │              │              │              │              │              │              │
       │              │              │              │              │              │              │
       │              │              │              │              │              │              │
       │              │              │              │              │              │              │
 n  add   Enter  agenda   /  search   v m/v w  views   ?  keys   Esc  back/quit    2026-06-07 · 1 event(s)
Saved Project kickoff at Sun 7 Jun 13:00
