src/tests/snapshots/calendar__tests__utils__agenda_edit_prefilled.snap
---
source: src/tests/utils.rs
expression: self.render()
---
 calendar   FOUR WEEKS  1 Jun 2026 – 28 Jun 2026  ■ personal

       MON             TUE             WED             THU             FRI             SAT             SUN
┌●▶ 1 Jun──────┐┌   2 Jun──────┐┌   3 Jun──────┐┌   4 Jun──────┐┌   5 Jun──────┐┌   6 Jun──────┐┌   7 Jun──────┐
│▌10:00 Origina││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││ ┌ Edit appointment · start + duration ─────────────────────────────────────┐ ││              │
└──────────────┘└─│ ┌Description───────────────────────────────────────────────────────────┐ │─┘└──────────────┘
┌   8 Jun──────┐┌ │ │Original title                                                        │ │─┐┌   14 Jun─────┐
│              ││ │ └──────────────────────────────────────────────────────────────────────┘ │ ││              │
│              ││ │ ┌Start date────────────────────────────────────────────────────────────┐ │ ││              │
│              ││ │ │2026-06-01                                                            │ │ ││              │
│              ││ │ └──────────────────────────────────────────────────────────────────────┘ │ ││              │
│              ││ │ ┌Start time · 13:00 or 5pm · blank with duration = all day─────────────┐ │ ││              │
│              ││ │ │10:00                                                                 │ │ ││              │
└──────────────┘└─│ └──────────────────────────────────────────────────────────────────────┘ │─┘└──────────────┘
┌   15 Jun─────┐┌ │ ┌Duration · e.g. 45m, 1h30m, or 1:30───────────────────────────────────┐ │─┐┌   21 Jun─────┐
│              ││ │ │1h                                                                    │ │ ││              │
│              ││ │ └──────────────────────────────────────────────────────────────────────┘ │ ││              │
│              ││ │                                                                          │ ││              │
│              ││ │ C-t mode · Tab/BackTab fields · C-u clear · Enter save · Esc back        │ ││              │
│              ││ │                                                                          │ ││              │
└──────────────┘└─│                                                                          │─┘└──────────────┘
┌   22 Jun─────┐┌ └──────────────────────────────────────────────────────────────────────────┘─┐┌   28 Jun─────┐
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
│              ││              ││              ││              ││              ││              ││              │
└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘└──────────────┘
 n  add   Enter  agenda   v m  4-week   v w  week   ?  keys   Esc  back/quit    2026-06-01 · 1 event(s)
Reloaded 1 events
