src/tests/snapshots/calendar__tests__utils__agenda_edit_saved.snap
---
source: src/tests/utils.rs
expression: self.render()
---
 agenda   18 May 2026 – 15 Jun 2026  ·  centered on Monday 1 June  ■ personal

┌ 1 appointment(s) ─────────────────────────────────────────────┐┌ appointment details ────────────────────────┐
│Monday · 1 June 2026  · selected day                           ││Revised title                                │
│ ▶  10:00–11:00        Revised title  [personal]               ││Mon 1 Jun 2026 10:00 – Mon 1 Jun 2026 11:00  │
│                                                               ││Calendar: personal                           │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
│                                                               ││                                             │
└───────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────┘
 j/k  appointments   n  new   e  edit   x  delete   v m  views   q  back
Updated Revised title
