src/tests/snapshots/calendar__tests__utils__agenda_navigation_centered.snap
---
source: src/tests/utils.rs
expression: self.render()
---
 agenda   18 May 2026 – 15 Jun 2026  ·  centered on Monday 1 June  ■ personal

┌ 3 appointment(s) ────────────────────────────────────────────────────────────────────────────────────────────┐
│Sunday · 31 May 2026                                                                                          │
│    09:00–10:00        Previous day  [personal]                                                               │
│                                                                                                              │
│Monday · 1 June 2026  · selected day                                                                          │
│ ▶  10:00–11:00        Selected day  [personal]                                                               │
│                                                                                                              │
│Tuesday · 2 June 2026                                                                                         │
│    11:00–12:00        Following day  [personal]                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k  appointments   e  edit   x  delete   Esc  close
Reloaded 3 events
