src/tests/snapshots/calendar__tests__utils__event_search_filtered.snap
---
source: src/tests/utils.rs
expression: self.render()
---
 search  /pjt  ·  2 match(es)

┌ 2 appointment(s) ────────────────────────────────────────────────────────────────────────────────────────────┐
│Sunday · 31 May 2026                                                                                          │
│    09:00–10:00        Project Alpha  [personal]                                                              │
│                                                                                                              │
│Wednesday · 3 June 2026                                                                                       │
│ ▶  12:00–13:00        Project Beta  [personal]                                                               │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
│                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 C-j/C-k  matches   Enter  focus   Esc  back
